--- a/portage/make.conf
+++ b/portage/make.conf
@@ -20,3 +20,4 @@ USE="${USE} libressl -pcmcia usb -X -png -truetype -build -bindist -doc -elogind
 #CPU_FLAGS_X86:="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
 ACCEPT_KEYWORDS="amd64"
 FEATURES="distcc"
+CURL_SSL="libressl"
