--- a/csh.env
+++ b/csh.env
@@ -5,6 +5,7 @@
 setenv CONFIG_PROTECT '/usr/share/gnupg/qualified.txt'
 setenv CONFIG_PROTECT_MASK '/etc/sandbox.d /etc/fonts/fonts.conf /etc/gentoo-release /etc/terminfo /etc/dconf /etc/ca-certificates.conf /etc/revdep-rebuild'
 setenv DCC_EMAILLOG_WHOM_TO_BLAME ''
+setenv DISTCC_DIR '/var/tmp/portage/.distcc/'
 setenv DISTCC_ENABLE_DISCREPANCY_EMAIL ''
 setenv DISTCC_FALLBACK '1'
 setenv DISTCC_SAVE_TEMPS '0'
@@ -18,8 +19,8 @@ setenv LANG 'en_US.utf8'
 setenv LESS '-R -M --shift 5'
 setenv LESSOPEN '|lesspipe %s'
 setenv MANPAGER 'manpager'
-setenv MANPATH '/usr/share/gcc-data/x86_64-pc-linux-gnu/8.3.0/man:/usr/share/binutils-data/x86_64-pc-linux-gnu/2.31.1/man:/usr/lib/llvm/6/share/man:/usr/local/share/man:/usr/share/man'
+setenv MANPATH '/usr/share/gcc-data/x86_64-pc-linux-gnu/8.3.0/man:/usr/share/binutils-data/x86_64-pc-linux-gnu/2.31.1/man:/usr/lib/llvm/7/share/man:/usr/lib/llvm/6/share/man:/usr/local/share/man:/usr/share/man'
 setenv OPENGL_PROFILE 'xorg-x11'
-setenv PATH '/usr/lib/llvm/6/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/bin'
-setenv ROOTPATH '/usr/lib/llvm/6/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/bin'
+setenv PATH '/usr/lib/llvm/7/bin:/usr/lib/llvm/6/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/bin'
+setenv ROOTPATH '/usr/lib/llvm/7/bin:/usr/lib/llvm/6/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/bin'
 setenv UNCACHED_ERR_FD ''
