--- a/profile.env
+++ b/profile.env
@@ -5,6 +5,7 @@
 export CONFIG_PROTECT='/usr/share/gnupg/qualified.txt'
 export CONFIG_PROTECT_MASK='/etc/sandbox.d /etc/fonts/fonts.conf /etc/gentoo-release /etc/terminfo /etc/dconf /etc/ca-certificates.conf /etc/revdep-rebuild'
 export DCC_EMAILLOG_WHOM_TO_BLAME=''
+export DISTCC_DIR='/var/tmp/portage/.distcc/'
 export DISTCC_ENABLE_DISCREPANCY_EMAIL=''
 export DISTCC_FALLBACK='1'
 export DISTCC_SAVE_TEMPS='0'
@@ -18,8 +19,8 @@ export LANG='en_US.utf8'
 export LESS='-R -M --shift 5'
 export LESSOPEN='|lesspipe %s'
 export MANPAGER='manpager'
-export MANPATH='/usr/share/gcc-data/x86_64-pc-linux-gnu/8.3.0/man:/usr/share/binutils-data/x86_64-pc-linux-gnu/2.31.1/man:/usr/lib/llvm/6/share/man:/usr/local/share/man:/usr/share/man'
+export MANPATH='/usr/share/gcc-data/x86_64-pc-linux-gnu/8.3.0/man:/usr/share/binutils-data/x86_64-pc-linux-gnu/2.31.1/man:/usr/lib/llvm/7/share/man:/usr/lib/llvm/6/share/man:/usr/local/share/man:/usr/share/man'
 export OPENGL_PROFILE='xorg-x11'
-export PATH='/usr/lib/llvm/6/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/bin'
-export ROOTPATH='/usr/lib/llvm/6/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/bin'
+export PATH='/usr/lib/llvm/7/bin:/usr/lib/llvm/6/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/bin'
+export ROOTPATH='/usr/lib/llvm/7/bin:/usr/lib/llvm/6/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/bin'
 export UNCACHED_ERR_FD=''
