--- a/rc.conf
+++ b/rc.conf
@@ -48,11 +48,11 @@ rc_shell=/sbin/sulogin
 # /var/log/rc.log
 # NOTE: Linux systems require the devfs service to be started before
 # logging can take place and as such cannot log the sysinit runlevel.
-#rc_logger="NO"
+rc_logger="YES"
 
 # Through rc_log_path you can specify a custom log file.
 # The default value is: /var/log/rc.log
-#rc_log_path="/var/log/rc.log"
+rc_log_path="/var/log/rc.log"
 
 # If you want verbose output for OpenRC, set this to yes. If you want
 # verbose output for service foo only, set it to yes in /etc/conf.d/foo.
@@ -196,7 +196,7 @@ rc_tty_number=12
 # cgroups version 1 on /sys/fs/cgroup.
 # "legacy" mounts cgroups version 1 on /sys/fs/cgroup
 # "unified" mounts cgroups version 2 on /sys/fs/cgroup
-#rc_cgroup_mode="hybrid"
+rc_cgroup_mode="hybrid"
 
 # This is a list of controllers which should be enabled for cgroups version 2.
 # If hybrid mode is being used, controllers listed here will not be
@@ -212,10 +212,10 @@ rc_tty_number=12
 # Multiple settings and values can be specified.
 # For example, you would use this to set the maximum memory and maximum
 # number of pids for a service.
-#rc_cgroup_settings="
-#memory.max 10485760
-#pids.max max
-#"
+rc_cgroup_settings="
+memory.max 10485760
+pids.max max
+"
 #
 # For more information about the adjustments that can be made with
 # cgroups version 2, see Documentation/cgroups-v2.txt in the linux kernel
@@ -225,12 +225,12 @@ rc_tty_number=12
 # This switch controls whether or not cgroups version 1 controllers are
 # individually mounted under
 # /sys/fs/cgroup in hybrid or legacy mode.
-#rc_controller_cgroups="YES"
+rc_controller_cgroups="YES"
 
 # The following setting turns on the memory.use_hierarchy setting in the
 # root memory cgroup for cgroups v1.
 # It must be set to yes in this file if you want this functionality.
-#rc_cgroup_memory_use_hierarchy="NO"
+rc_cgroup_memory_use_hierarchy="NO"
 
 # The following settings allow you to set up values for the cgroups version 1
 # controllers for your services.
@@ -242,43 +242,43 @@ rc_tty_number=12
 # values. Each variable can hold multiple settings.
 # For example, you would use this to set the cpu.shares setting in the
 # cpu controller to 512 for your service.
-# rc_cgroup_cpu="
-# cpu.shares 512
-# "
+rc_cgroup_cpu="
+cpu.shares 512
+"
 #
 # For more information about the adjustments that can be made with
 # cgroups version 1, see Documentation/cgroups-v1/* in the linux kernel
 # source tree.
 
 # Set the blkio controller settings for this service.
-#rc_cgroup_blkio=""
+rc_cgroup_blkio=""
 
 # Set the cpu controller settings for this service.
-#rc_cgroup_cpu=""
+rc_cgroup_cpu=""
 
 # Add this service to the cpuacct controller (any value means yes).
-#rc_cgroup_cpuacct=""
+rc_cgroup_cpuacct=""
 
 # Set the cpuset controller settings for this service.
-#rc_cgroup_cpuset=""
+rc_cgroup_cpuset=""
 
 # Set the devices controller settings for this service.
-#rc_cgroup_devices=""
+rc_cgroup_devices=""
 
 # Set the hugetlb controller settings for this service.
-#rc_cgroup_hugetlb=""
+rc_cgroup_hugetlb=""
 
 # Set the memory controller settings for this service.
-#rc_cgroup_memory=""
+rc_cgroup_memory=""
 
 # Set the net_cls controller settings for this service.
-#rc_cgroup_net_cls=""
+rc_cgroup_net_cls=""
 
 # Set the net_prio controller settings for this service.
-#rc_cgroup_net_prio=""
+rc_cgroup_net_prio=""
 
 # Set the pids controller settings for this service.
-#rc_cgroup_pids=""
+rc_cgroup_pids=""
 
 # Set this to YES if you want all of the processes in a service's cgroup
 # killed when the service is stopped or restarted.
